a1/brendan_gordon/TEST_PROGRAMS/invalidtype/evan_vassallo/prog4.min
var t : float;
var x : int;
var x : string;

